2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.tcl:
	* htmlparse.man:
	* pkgIndex.tcl:  Set version of the package to to 0.3.1.

2003-03-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.test: Added htmlparse-3.4 to exercise the fix.
	* htmlparse.tcl (::htmlparse::parse): Fixed bug #640932, reported
	  by Scott Goodwin <scottg@users.sourceforge.net>. Cause of the
	  bug: Incomplete tags were correctly detected and stored for the
	  next call, but incorrectly not used in said next call.

2003-02-24  David N. Welton  <davidw@dedasys.com>

	* htmlparse.tcl (::htmlparse::PrepareHtml): Use string map instead
	of regsub.

2003-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* htmlparse.tcl (::htmlparse::mapEscapes): Fixed typo (strimg ->
	string) to pass test suite.

2003-02-05  David N. Welton  <davidw@dedasys.com>

	* htmlparse.tcl (::htmlparse::mapEscapes): Use string match
	instead of regexp. Feature [ 676536 ].

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.man: More semantic markup, less visual one.

2002-08-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Fixed SF bug #579853. Added an 'bsl' key and
	  value to 'htmlparse::escapes' required to reconvert the
	  backslash escapes inserted by 'htmlparse::PrepareHtml'. Thanks
	  to Michael Cleverly <cleverly@users.sourceforge.net> for the
	  report.

2002-06-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* htmlparse.tcl:
	* htmlparse.n:
	* htmlparse.man: Bumped to version 0.3.

2002-02-09  David N. Welton  <davidw@dedasys.com>

	* htmlparse.n: Cleaned up some of the language in the man page.

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Frink 2.2 run, fixed dubious code.
